<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:gravity="center_horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ComplianceInspectionActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:id="@+id/compliance_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp">

        <RelativeLayout
            android:id="@+id/compliance_inspection_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/date_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/date_hint"
                    android:inputType="none"
                    android:editable="false"
                    android:maxLines="1"
                    android:padding="10dp"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/finding_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/date_input">

                <EditText
                    android:id="@+id/finding"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:hint="@string/prompt_finding"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textMultiLine"
                    android:maxLines="10"
                    android:padding="10dp"
                    android:singleLine="false" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/description_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/finding_input">

                <EditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:hint="@string/prompt_comment"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textMultiLine"
                    android:maxLines="10"
                    android:padding="10dp"
                    android:singleLine="false"
                    android:layout_margin="10dp"/>

            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:id="@+id/status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/description_input"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:spinnerMode="dropdown" />

            <include layout="@layout/content_compliance_inspection" />

            <ImageView
                android:id="@+id/compliance_image"
                android:layout_width="300dp"
                android:layout_height="250dp"
                android:layout_centerInParent="true"
                android:layout_below="@+id/status"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="20dp"
                android:padding="10dp" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/cancel_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/compliance_image"
                android:layout_alignParentStart="true"
                android:layout_alignParentLeft="true"
                android:layout_marginStart="@dimen/fab_margin"
                android:layout_marginLeft="@dimen/fab_margin"
                android:layout_marginTop="@dimen/fab_margin"
                android:layout_marginEnd="@dimen/fab_margin"
                android:layout_marginRight="@dimen/fab_margin"
                android:layout_marginBottom="@dimen/fab_margin"
                app:backgroundTint="@android:color/holo_red_dark"
                app:srcCompat="@android:drawable/ic_input_delete" />


            <android.support.design.widget.FloatingActionButton
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/compliance_image"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_margin="@dimen/fab_margin"
                app:srcCompat="@android:drawable/ic_menu_send" />

        </RelativeLayout>

    </ScrollView>

</LinearLayout>